--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -421,4 +421,51 @@
   keywords  = {Image Processing, Erosion, Edge Detection, Dilation, QR Code, Close Operation},
 }
 
+@Online{Paavola2023,
+  author = {Alia Paavola},
+  date   = {2023-04-07},
+  title  = {SMS marketing vs. email marketing: The ultimate comparison},
+}
+
+@Article{folstad2021investigating,
+  author    = {F{\o}lstad, Asbj{\o}rn and Taylor, Cameron},
+  title     = {Investigating the user experience of customer service chatbot interaction: a framework for qualitative analysis of chatbot dialogues},
+  number    = {1},
+  pages     = {6},
+  volume    = {6},
+  journal   = {Quality and User Experience},
+  publisher = {Springer},
+  year      = {2021},
+}
+
+@Online{Mercir2022,
+  author  = {Marc Mercir},
+  date    = {2022-11-29},
+  title   = {Three Key Advantages of Using a Framework BotPress},
+  url     = {https://botpress.com/blog/three-key-advantages-of-using-a-framework},
+  urldate = {2023-05-10},
+}
+
+@InProceedings{Rahman2017,
+  author = {Rahman, Al and Mamun, Abdullah and Islam, Alma},
+  date   = {2017-12},
+  title  = {Programming challenges of chatbot: Current and future prospective},
+  doi    = {10.1109/R10-HTC.2017.8288910},
+  pages  = {75-78},
+}
+
+@InProceedings{Gkikas2021,
+  author = {Gkikas, Dimitris and Theodoridis, Prokopis and Tzavella, Georgia and Vlachopoulou, Georgia and Kondyli, Isidora and Tzioli, Melpomeni},
+  date   = {2021-01},
+  title  = {Chatbot Tools Evaluation},
+  doi    = {10.6084/m9.figshare.16950700.v1},
+}
+
+@Patent{CotyM.CollinsColumbus2019,
+  author = {Coty M. Collins (Columbus, OH)},
+  date   = {2019-03-07},
+  number = {10817265},
+  title  = {CHATBOT DEVELOPMENT AND DEPLOYMENT PLATFORM},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
