--- a/bachproef/methodologie.tex
+++ b/bachproef/methodologie.tex
@@ -48,7 +48,21 @@ Het zoeken naar een betere en snellere QR-code scanner software of hardware zal 
 \section{Chatbot requirements Analyse}%
 \label{sec:chatbotRequirment}
 
+Het ontwikkelen en integreren van een chatbot in een mobiele applicatie is een complex proces. Er zijn talrijke opties om een chatbot te ontwikkelen, echter moet er rekening gehouden worden met het effectieve gebruik. Om de doeleinden goed in kaart te brengen is er aan de hand van alle doeleinden een requirements analyse opgesteld samen met het bestuur van Lockit Rentals. Hierbij zijn alle opties goed afgewogen en de doeleinden opgesomd.
 
+De chatbot moet in staat zijn om mensen te helpen met allerlei vragen. Dit kan aan de hand van slimme vragen of eventueel van vooraf gestelde vragen waarbij de gebruiker gewoon de vraag moet aanklikken. De chatbot moet telkens op een correcte manier afgesloten worden. Alles moet in een logische volgorde verlopen met bij elke interactie een gepast antwoord. Het hoofddoel van de chatbot is het teruggeven van een verloren QR-code. Op welke communicatieve manier deze persoon zijn verloren QR-code terug zal krijgen, was nog onduidelijk. Voor deze Proof-Of-Concept zullen we gebruik maken van email communicatie en niet via SMS. Op basis van eigen ondervindingen wordt geconcludeerd dat de kosten van SMS in vergelijking met e-mail aanzienlijk hoger zijn \autocite{Paavola2023} .Dit gegeven speelt belangrijke factor bij het ontwerpen van de Lockit Rental chatbot. 
+
+\section{Chatbot uitwerking}%
+\label{sec:chatbotUitwerking}
+
+Voor het maken van een chatbot die festivalgangers helpt bij het terugwinnen van verloren QR-code maken we gebruik van een online platform. Als eerste stap heb ik besloten om een online platform te gebruiken om deze chatbot te gaan ontwikkelen. Bij het maken van deze keuze heb ik rekening gehouden met verschillende factoren, zoals de functionaliteit, de integratiemogelijkheden, de prijs en beschikbare documentatie. De keuze van het platform moet aansluiten bij de specifieke behoeften en vereisten van Lockit Rentals. Deze behoeften zijn opgesomd in de requirements analyse \ref{sec:chatbotRequirment}.
+
+Het is namelijk mogelijk om een chatbot zonder service te ontwikkelen maar toch heb ik gekozen om met een online service te werken. Dit biedt ons voordelen zoals technische ondersteuning, makkelijke integratie met andere systemen en snellere ontwikkelingstijd \autocite{Mercir2022} \autocite{folstad2021investigating}. De technologie van een chatbot zonder service leren en beheersen inclusief het maken van een geïntegreerd systeem dat operationeel moet zijn tegen en bepaalde einddatum is onhaalbaar. Hiervoor heb ik onderzoek gedaan naar een online chatbot platvorm die een combinatie weergeeft van beide. Hierdoor kunnen we een eenvoudige chatbot maken en integreren in een nieuw systeem in een heel korte tijdspanne. Echter kunnen we bij specifiekere gebruiksscenario’s de bot uitbreiden op vlak van functionaliteit. Het platform laat ons toe om eigen gespecialiseerde code te schrijven en uit te voeren doorheen het chatproces van de festivalganger. 
+
+%TODO: referenctie goedleggen naar juist hoofdstuk
+
+Na het maken van deze keuze, ben ik aan de slag gegaan met het uitwerken van de chatbot. Bij ontwikkeling hebben we ons gericht op een duidelijke gebruikersinterface die makkelijk gehanteerd kan worden door de eindgebruiker. Hoe deze chatbot is opgebouwd kan u vinden in \ref{ch:Proof-Of-Concept}. Aangezien gewerkt wordt met een online service waarvan de integratiemogelijkheden goed opgebouwd zijn, is de live chatbot al in de Lockit Rentals applicatie geïntegreerd. Later kan er ook nog geopteerd worden om deze chatbot te integreren in hun eigen Facebookpagina of andere sociale media platformen. 
+Tot slot verwijs ik graag naar het resultaat van de chatbot \ref{ch:verwerkingresultaten}. Onze chatbot kan nu succesvol QR-codes recupereren en de gevraagde informatie weergeven.
 
 
 
